2009-10-19  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Set the default route entry's sensitivity based on whether the
	  object is modifiable or not.
	* common/libnwamui.c, common/libnwamui.h:
	  Add function nwamui_util_ask_about_dup_obj() to show a message
	  dialog saying that rename isn't possible, so ask for duplication.
	* capplet/nwam_location_dialog.c:
	  Fix defect#12031 where renaming of a location should prompt for
	  duplication if not possible to rename (as per UI spec).

2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_location_dialog.c: 
	  Fix defect#12030 where the rename button was being enabled for
	  SYSTEM Locations.

2009-10-16  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_ncu.c, common/nwamui_ncu.h,
	  ui/nwam-manager-properties.ui, capplet/nwam_conn_conf_ip_panel.c: 
	  Fix defect#11975 - add ipv4/6 default route properties to NCUs, and
	  add ip4/6 default route configuration entry to IP panel.
	* ui/nwam-manager-wireless.ui, capplet/nwam_wireless_chooser.c: 
	  Move the refresh button to location suggested by Calum, and don't
	  remove existing entries in tabke unless a scan event is actually
	  returned from nwamd (if there's no change in APs, then no event will
	  be generated).
	* nwam_core/usr/include/libnwam.h:
	  Update to latest from hg, to get the changes for ipv4/6 default
	  route properties.

2009-10-15  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_vpn_pref_dialog.c: 
	  Add rename button and set sensitivity based on the can_rename()
	  flag.
	* capplet/nwam_wireless_chooser.c: 
	  Add first attempt at a wireless refresh button.
	* capplet/nwam_wireless_dialog.h, capplet/nwam_wireless_dialog.c: 
	  Change to be a singletion, and change new function to be 
	  nwam_wireless_dialog_get_instance(). 
	* capplet/nwam_conn_conf_ip_panel.c: 
	  Update to new name of nwam_wireless_dialog_get_instance()
	* common/libnwamui.h: